feat: enhance internationalization support with download progress messages and update translations

--- a/internal/i18n/locales/de.yml
+++ b/internal/i18n/locales/de.yml
@@ -34,7 +34,7 @@ help:
   confirm: "bestätigen"
   quit: "beenden"
 
-terminal:
+download:
   downloading: "Herunterladen"
   extracting: "Extrahieren"
   completed: "Abgeschlossen"
