feat: add loading spinner during search operations and enhance UI with scrolling support

--- a/internal/i18n/locales/de.yml
+++ b/internal/i18n/locales/de.yml
@@ -59,6 +59,7 @@ errors:
 
 search:
   results_for: "Suchergebnisse"
+  searching: "Suche"
   podcasts: "Podcasts"
   episodes: "Episoden"
   select_hint: "Wähle bis zu %d Episoden"
