--- a/internal/i18n/locales/es.yml
+++ b/internal/i18n/locales/es.yml
@@ -59,6 +59,7 @@ errors:
 
 search:
   results_for: "Resultados de búsqueda"
+  searching: "Buscando"
   podcasts: "Podcasts"
   episodes: "Episodios"
   select_hint: "Selecciona hasta %d episodios"
