feat: add settings management UI and backend support for configurable options

--- a/internal/i18n/locales/de.yml
+++ b/internal/i18n/locales/de.yml
@@ -100,6 +100,13 @@ ui:
   completed: "abgeschlossen"
   failed: "fehlgeschlagen"
   cancelled: "abgebrochen"
+  settings: "Einstellungen"
+  language: "Sprache"
+  format: "Format"
+  quality: "Qualität"
+  twitter_auth: "Twitter Auth"
+  configured: "Konfiguriert"
+  not_configured: "Nicht konfiguriert"
 
 # Server-Nachrichten
 server:
