--- a/internal/core/i18n/locales/en.yml
+++ b/internal/core/i18n/locales/en.yml
@@ -132,6 +132,20 @@ ui:
   no_webdav_servers: "No WebDAV servers configured"
   clear_history: "Clear"
   clear_all: "Clear All"
+  # Torrent
+  torrent: "BT/Magnet"
+  torrent_hint: "Paste magnet link or torrent URL..."
+  torrent_submit: "Send"
+  torrent_submitting: "Sending..."
+  torrent_success: "Torrent added successfully"
+  torrent_not_configured: "Torrent client not configured. Go to Settings to set up."
+  torrent_settings: "Torrent Client"
+  torrent_client: "Client Type"
+  torrent_host: "Host"
+  torrent_test: "Test Connection"
+  torrent_testing: "Testing..."
+  torrent_test_success: "Connection successful"
+  torrent_enabled: "Enable Torrent"
 
 # Server messages
 server:
