--- a/internal/core/i18n/locales/en.yml
+++ b/internal/core/i18n/locales/en.yml
@@ -134,6 +134,12 @@ ui:
   clear_all: "Clear All"
   # WebDAV
   webdav_browser: "WebDAV"
+  select_remote: "Select Remote"
+  empty_directory: "Empty directory"
+  download_selected: "Download Selected"
+  selected_files: "selected"
+  loading: "Loading..."
+  go_to_settings: "Go to Settings"
   # Torrent
   torrent: "BT/Magnet"
   torrent_hint: "Paste magnet link or torrent URL..."
