--- a/internal/core/i18n/locales/jp.yml
+++ b/internal/core/i18n/locales/jp.yml
@@ -122,6 +122,12 @@ ui:
   clear_all: "すべてクリア"
   # WebDAV
   webdav_browser: "WebDAV"
+  select_remote: "リモートを選択"
+  empty_directory: "空のディレクトリ"
+  download_selected: "選択をダウンロード"
+  selected_files: "選択済み"
+  loading: "読み込み中..."
+  go_to_settings: "設定へ"
   # トレント
   torrent: "BT/マグネット"
   torrent_hint: "マグネットリンクまたはトレントURLを貼り付け..."
