--- a/internal/core/i18n/locales/en.yml
+++ b/internal/core/i18n/locales/en.yml
@@ -155,8 +155,8 @@ ui:
   torrent_test_success: "Connection successful"
   torrent_enabled: "Enable Torrent"
   # Toast
-  download_queued: "Download queued"
-  downloads_queued: "downloads queued"
+  download_queued: "Download started. Check progress on Download page."
+  downloads_queued: "downloads started. Check progress on Download page."
 
 # Server messages
 server:
