--- a/internal/core/i18n/locales/en.yml
+++ b/internal/core/i18n/locales/en.yml
@@ -157,6 +157,17 @@ ui:
   # Toast
   download_queued: "Download started. Check progress on Download page."
   downloads_queued: "downloads started. Check progress on Download page."
+  # Podcast
+  podcast: "Podcast"
+  podcast_search: "Search"
+  podcast_search_hint: "Search podcasts or episodes..."
+  podcast_searching: "Searching..."
+  podcast_channels: "Podcasts"
+  podcast_episodes: "Episodes"
+  podcast_no_results: "No results found"
+  podcast_episodes_count: "episodes"
+  podcast_back: "Back"
+  podcast_download_started: "Download started"
 
 # Server messages
 server:
