--- a/internal/core/i18n/locales/es.yml
+++ b/internal/core/i18n/locales/es.yml
@@ -145,6 +145,17 @@ ui:
   # Toast
   download_queued: "Descarga iniciada. Verifica el progreso en la página de Descargas."
   downloads_queued: "descargas iniciadas. Verifica el progreso en la página de Descargas."
+  # Podcast
+  podcast: "Podcast"
+  podcast_search: "Buscar"
+  podcast_search_hint: "Buscar podcasts o episodios..."
+  podcast_searching: "Buscando..."
+  podcast_channels: "Podcasts"
+  podcast_episodes: "Episodios"
+  podcast_no_results: "No se encontraron resultados"
+  podcast_episodes_count: "episodios"
+  podcast_back: "Volver"
+  podcast_download_started: "Descarga iniciada"
 
 # Mensajes del servidor
 server:
