--- a/internal/core/i18n/locales/fr.yml
+++ b/internal/core/i18n/locales/fr.yml
@@ -145,6 +145,17 @@ ui:
   # Toast
   download_queued: "Téléchargement démarré. Vérifiez la progression sur la page Téléchargement."
   downloads_queued: "téléchargements démarrés. Vérifiez la progression sur la page Téléchargement."
+  # Podcast
+  podcast: "Podcast"
+  podcast_search: "Rechercher"
+  podcast_search_hint: "Rechercher des podcasts ou épisodes..."
+  podcast_searching: "Recherche..."
+  podcast_channels: "Podcasts"
+  podcast_episodes: "Épisodes"
+  podcast_no_results: "Aucun résultat trouvé"
+  podcast_episodes_count: "épisodes"
+  podcast_back: "Retour"
+  podcast_download_started: "Téléchargement démarré"
 
 # Messages du serveur
 server:
