--- a/internal/core/i18n/locales/jp.yml
+++ b/internal/core/i18n/locales/jp.yml
@@ -145,6 +145,17 @@ ui:
   # Toast
   download_queued: "ダウンロードを開始しました。ダウンロードページで進捗を確認してください。"
   downloads_queued: "件のダウンロードを開始しました。ダウンロードページで進捗を確認してください。"
+  # Podcast
+  podcast: "ポッドキャスト"
+  podcast_search: "検索"
+  podcast_search_hint: "ポッドキャストやエピソードを検索..."
+  podcast_searching: "検索中..."
+  podcast_channels: "ポッドキャスト"
+  podcast_episodes: "エピソード"
+  podcast_no_results: "結果が見つかりません"
+  podcast_episodes_count: "エピソード"
+  podcast_back: "戻る"
+  podcast_download_started: "ダウンロードを開始しました"
 
 # サーバーメッセージ
 server:
