--- a/internal/core/i18n/locales/zh.yml
+++ b/internal/core/i18n/locales/zh.yml
@@ -157,6 +157,17 @@ ui:
   # Toast
   download_queued: "下载任务已创建，请在下载页查看进度"
   downloads_queued: "个下载任务已创建，请在下载页查看进度"
+  # Podcast
+  podcast: "播客"
+  podcast_search: "搜索"
+  podcast_search_hint: "搜索播客节目或单集..."
+  podcast_searching: "搜索中..."
+  podcast_channels: "播客节目"
+  podcast_episodes: "单集"
+  podcast_no_results: "未找到结果"
+  podcast_episodes_count: "集"
+  podcast_back: "返回"
+  podcast_download_started: "下载已开始"
 
 # 服务器消息
 server:
